# aigis

./: .gitignore  LICENSE  README.md  pyproject.toml  report.md
config/: default.yaml
openclaw/skills/aigis/: SKILL.md
scripts/: setup_openclaw.sh  setup_openclaw_cron.sh
scripts/actions/: clear_disk_cache.sh  restart_container.sh  run_restic.sh
src/aigis/: __init__.py  __main__.py  config.py  crypto.py  history.py  main.py  runner.py
src/aigis/actions/: __init__.py  audit.py  executor.py  registry.py
src/aigis/approval/: __init__.py  cli.py
src/aigis/collectors/: __init__.py  base.py  disk.py  docker.py  load.py  network.py  restic.py
src/aigis/engine/: __init__.py  rules.py  runner.py
src/aigis/kb/: __init__.py  ingestion.py  retrieval.py  store.py
src/aigis/llm/: __init__.py  analyzer.py  client.py  explainer.py  prompts.py  suggester.py  tracing.py
src/aigis/report/: __init__.py  builder.py  markdown.py
src/aigis/schemas/: __init__.py  actions.py  checks.py  report.py  run_history.py  signals.py
src/aigis/web/: __init__.py  app.py  dependencies.py
src/aigis/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/aigis/web/frontend/src/: App.tsx  index.css  main.tsx
src/aigis/web/frontend/src/api/: actions.ts  audit.ts  (+3 more)
src/aigis/web/routes/: actions.py  audit.py  events.py  runs.py  scan.py  settings.py
src/aigis/web/static/: index.html
src/aigis/web/static/assets/: index-CmenL-jG.css  index-DU73Jp45.js
tests/: __init__.py  test_actions.py  test_collectors.py  test_engine.py  test_restic.py  test_schemas.py
(+19 files in other folders)
