[project]
name = "aigis"
version = "0.1.0"
description = "Safety-first monitoring agent for homelab and small-server infrastructure"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84",
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation-anthropic>=0.1",
    "paramiko>=3.0",
    "python-dotenv>=1.0",
    "psutil>=6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
aigis = "aigis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aigis"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
